--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
       <section id="intro">
         <div class="logo">MB</div>
         <div>
-          <h1>MyBoard에 오신 것을 환영합니다</h1>
+          <h1>MyBoard에 오신 것을 환영합니다!</h1>
           <p>모두가 쉽게 사용할 수 있는 자유게시판입니다.</p>
         </div>
       </section>
