--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
   <body>
     <div id="container">
       <section id="intro">
-        <div class="logo">MB</div>
+        <img src="img/logo.png" class="logo" alt="로고" />
         <div>
           <h1>MyBoard에 오신 것을 환영합니다!</h1>
           <p>모두가 쉽게 사용할 수 있는 자유게시판입니다.</p>
