--- a/posting.html
+++ b/posting.html
@@ -9,7 +9,7 @@
   <body>
     <div id="container">
       <header>
-        <div class="logo">MB</div>
+        <img src="img/logo.png" class="logo" alt="로고" />
         <h1>MyBoard 자유게시판</h1>
         <button type="button" id="logout">로그아웃</button>
       </header>
