--- a/login.html
+++ b/login.html
@@ -7,41 +7,45 @@
     <title>MyBoard</title>
   </head>
   <body>
-    <div id="container">
-      <section id="intro">
-        <img src="img/logo.png" class="logo" alt="로고" />
-        <div>
-          <h1>MyBoard에 오신 것을 환영합니다!</h1>
-          <p>모두가 쉽게 사용할 수 있는 자유게시판입니다.</p>
+    <div class="login-wrapper">
+        <div class="logo-section">
+            <img src="img/logo.svg" class="logo" width="300px"></img>
+            <div class="logo-title">자유게시판</div>
+            <div class="logo-subtitle">자유롭게 소통하는 공간</div>
         </div>
-      </section>
-      <section id="form">
-        <form>
-          <fieldset>
-            <legend>로그인</legend>
-            <ul>
-              <li>
-                <label for="id">아이디</label><br />
-                <input type="text" id="id" name="id" placeholder="ID" />
-              </li>
-              <li>
-                <label for="pw">비밀번호</label><br />
-                <input
-                  type="password"
-                  id="pw"
-                  name="pw"
-                  placeholder="password"
-                />
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset id="buttons">
-            <button type="submit">로그인</button>
-            <button type="button">회원가입</button>
-          </fieldset>
-        </form>
-      </section>
-      <script src="js/login.js"></script>
+
+        <div class="login-container">
+        <div class="login-header">
+            <h1>🔐 로그인</h1>
+            <p>자유게시판에 오신 것을 환영합니다</p>
+        </div>
+
+        <div class="login-body">
+            <form>
+                <div class="form-group">
+                    <label>아이디</label>
+                    <div class="input-wrapper">
+                        <span class="input-icon">👤</span>
+                        <input type="text" id="id" placeholder="아이디를 입력하세요" required>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label>비밀번호</label>
+                    <div class="input-wrapper">
+                        <span class="input-icon">🔒</span>
+                        <input type="password" id="pw" placeholder="비밀번호를 입력하세요" required>
+                    </div>
+                </div>
+
+                <button type="submit" class="btn-login">로그인</button>
+            </form>
+
+            <div class="signup-link">
+                아직 회원이 아니신가요? <a href="signup.html">회원가입</a>
+            </div>
+        </div>
     </div>
-  </body>
+    <script src="js/login.js"></script>
+</body>
 </html>
