--- a/posting.html
+++ b/posting.html
@@ -7,32 +7,58 @@
     <title>MyBoard</title>
   </head>
   <body>
-    <div id="container">
-      <header>
-        <img src="img/logo.png" class="logo" alt="로고" />
-        <h1>MyBoard 자유게시판</h1>
-        <button type="button" id="logout">로그아웃</button>
-      </header>
-      <section>
-        <form>
-          <ul>
-            <li>
-              <label>제목</label><br />
-              <input type="text" />
-            </li>
-            <li>
-              <label>내용</label><br />
-              <textarea></textarea>
-            </li>
-          </ul>
-          <div>
-            <button type="button" id="list">목록으로</button>
-            <button type="reset">초기화</button>
-            <button type="button" id="upload">완료</button>
+    <div class="container">
+      <div class="header">
+        <div class="header-left">
+          <img src="img/logo.svg" class="header-logo" width="80px" />
+          <div class="header-content">
+            <h1>자유게시판</h1>
+            <p>자유롭게 소통하는 공간</p>
           </div>
-        </form>
-      </section>
+        </div>
+        <span></span>
+        <button class="btn-logout">🚪 로그아웃</button>
+      </div>
+
+      <div class="main-content">
+        <div class="write-form active">
+          <h2 class="write-title">📝 새 글 등록</h2>
+
+          <form id="postForm">
+            <div class="form-group">
+              <label>제목</label>
+              <input
+                type="text"
+                id="title"
+                placeholder="제목을 입력하세요"
+                required
+              />
+            </div>
+
+            <div class="form-group">
+              <label>내용</label>
+              <textarea
+                id="content"
+                placeholder="내용을 입력하세요"
+                required
+              ></textarea>
+            </div>
+
+            <div class="btn-group">
+              <button type="submit" class="btn btn-submit">📌 등록</button>
+              <button
+                type="button"
+                class="btn btn-cancel"
+                onclick="location.href='index.html';"
+              >
+                ❌ 취소
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
+
     <script src="js/posting.js"></script>
   </body>
 </html>
