--- a/signup.html
+++ b/signup.html
@@ -7,51 +7,77 @@
     <title>MyBoard</title>
   </head>
   <body>
-    <div id="container">
-      <section id="form">
-        <form>
-          <fieldset>
-            <legend>회원가입</legend>
-            <ul>
-              <li>
-                <label for="id">아이디</label><br />
-                <input type="text" id="id" name="id" placeholder="ID" />
-              </li>
-              <li>
-                <label for="pw">비밀번호</label><br />
+    <div class="signup-wrapper">
+      <div class="signup-container">
+        <div class="signup-header">
+          <h1>✨ 회원가입</h1>
+          <p>게시판 회원이 되어보세요</p>
+        </div>
+
+        <div class="signup-body">
+          <form>
+            <div class="form-group">
+              <label>아이디 <span class="required">*</span></label>
+              <div class="input-wrapper">
+                <span class="input-icon">👤</span>
+                <input
+                  type="text"
+                  id="id"
+                  placeholder="아이디를 입력하세요"
+                  required
+                />
+              </div>
+              <div class="form-help">4-20자의 영문, 숫자를 사용하세요</div>
+            </div>
+
+            <div class="form-group">
+              <label>비밀번호 <span class="required">*</span></label>
+              <div class="input-wrapper">
+                <span class="input-icon">🔒</span>
                 <input
                   type="password"
                   id="pw"
-                  name="pw"
-                  placeholder="password"
+                  placeholder="비밀번호를 입력하세요"
+                  required
                 />
-              </li>
-              <li>
-                <label for="pwchk">비밀번호 확인</label><br />
+              </div>
+              <div class="form-help">8자 이상, 영문/숫자/특수문자 포함</div>
+            </div>
+
+            <div class="form-group">
+              <label>비밀번호 확인 <span class="required">*</span></label>
+              <div class="input-wrapper">
+                <span class="input-icon">🔒</span>
                 <input
                   type="password"
                   id="pwchk"
-                  name="pwchk"
-                  placeholder="password"
+                  placeholder="비밀번호를 다시 입력하세요"
+                  required
                 />
-              </li>
-              <li>
-                <label for="nick">닉네임</label><br />
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label>닉네임 <span class="required">*</span></label>
+              <div class="input-wrapper">
+                <span class="input-icon">✏️</span>
                 <input
                   type="text"
                   id="nick"
-                  name="nick"
-                  placeholder="nickname"
+                  placeholder="이름을 입력하세요"
+                  required
                 />
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset id="buttons">
-            <button type="button" id="undo">돌아가기</button>
-            <button type="button" id="signup">회원가입</button>
-          </fieldset>
-        </form>
-      </section>
+              </div>
+            </div>
+
+            <button type="submit" class="btn-signup">가입하기</button>
+
+            <div class="login-link">
+              이미 회원이신가요? <a href="login.html">로그인</a>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
     <script src="js/signup.js"></script>
   </body>
