--- a/public/signup.html
+++ b/public/signup.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="css/signup.css" rel="stylesheet" />
-    <title>MyBoard</title>
+    <link href="/css/signup.css" rel="stylesheet" />
+    <title>어울림</title>
   </head>
   <body>
     <div class="signup-wrapper">
       <div class="signup-container">
         <div class="signup-header">
           <h1>✨ 회원가입</h1>
-          <p>게시판 회원이 되어보세요</p>
+          <p>어울림 회원이 되어보세요</p>
         </div>
 
         <div class="signup-body">
@@ -73,12 +73,12 @@
             <button type="submit" class="btn-signup">가입하기</button>
 
             <div class="login-link">
-              이미 회원이신가요? <a href="login.html">로그인</a>
+              이미 회원이신가요? <a href="/login.html">로그인</a>
             </div>
           </form>
         </div>
       </div>
     </div>
-    <script src="js/signup.js"></script>
+    <script src="/js/signup.js"></script>
   </body>
 </html>
