--- a/public/edit.html
+++ b/public/edit.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="css/posting.css" rel="stylesheet" />
-    <title>MyBoard</title>
+    <link href="/css/posting.css" rel="stylesheet" />
+    <title>어울림</title>
   </head>
   <body>
     <div class="container">
       <div class="header">
         <div class="header-left">
-          <img src="img/logo.svg" class="header-logo" width="80px" />
+          <img src="/img/logo.svg" class="header-logo" width="80px" />
           <div class="header-content">
-            <h1>자유게시판</h1>
-            <p>자유롭게 소통하는 공간</p>
+            <h1>어울림</h1>
+            <p>우리들의 이야기를 담는 공간</p>
           </div>
         </div>
         <span></span>
@@ -22,36 +22,27 @@
 
       <div class="main-content">
         <div class="write-form active">
-          <h2 class="write-title">📝 새 글 등록</h2>
+          <h2 class="write-title">🛠 게시글 수정</h2>
 
-          <form id="postForm">
+          <form id="editForm">
             <div class="form-group">
               <label>제목</label>
-              <input
-                type="text"
-                id="title"
-                placeholder="제목을 입력하세요"
-                required
-              />
+              <input type="text" id="title" required />
             </div>
 
             <div class="form-group">
               <label>내용</label>
-              <textarea
-                id="content"
-                placeholder="내용을 입력하세요"
-                required
-              ></textarea>
+              <textarea id="content" required></textarea>
             </div>
 
             <div class="btn-group">
-              <button type="submit" class="btn btn-submit">📌 등록</button>
+              <button type="submit" class="btn btn-submit">💾 저장</button>
               <button
                 type="button"
                 class="btn btn-cancel"
-                onclick="location.href='index.html';"
+                onclick="history.back()"
               >
-                ❌ 취소
+                취소
               </button>
             </div>
           </form>
@@ -59,6 +50,6 @@
       </div>
     </div>
 
-    <script src="js/posting.js"></script>
+    <script src="/js/edit.js"></script>
   </body>
 </html>
