--- a/public/login.html
+++ b/public/login.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="css/login.css" rel="stylesheet" />
-    <title>MyBoard</title>
+    <link href="/css/login.css" rel="stylesheet" />
+    <title>어울림</title>
   </head>
   <body>
     <div class="login-wrapper">
         <div class="logo-section">
-            <img src="img/logo.svg" class="logo" width="300px"></img>
-            <div class="logo-title">자유게시판</div>
-            <div class="logo-subtitle">자유롭게 소통하는 공간</div>
+            <img src="/img/logo.svg" class="logo" width="300px"></img>
+            <div class="logo-title">어울림</div>
+            <div class="logo-subtitle">우리들의 이야기를 담는 공간</div>
         </div>
 
         <div class="login-container">
         <div class="login-header">
             <h1>🔐 로그인</h1>
-            <p>자유게시판에 오신 것을 환영합니다</p>
+            <p>어울림에 오신 것을 환영합니다</p>
         </div>
 
         <div class="login-body">
@@ -42,10 +42,10 @@
             </form>
 
             <div class="signup-link">
-                아직 회원이 아니신가요? <a href="signup.html">회원가입</a>
+                아직 회원이 아니신가요? <a href="/signup.html">회원가입</a>
             </div>
         </div>
     </div>
-    <script src="js/login.js"></script>
+    <script src="/js/login.js"></script>
 </body>
 </html>
