--- a/public/post.html
+++ b/public/post.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="css/post.css" rel="stylesheet" />
-    <title>MyBoard</title>
+    <link href="/css/post.css" rel="stylesheet" />
+    <title>어울림</title>
   </head>
   <body>
     <div class="container">
       <div class="header">
         <div class="header-left">
-          <img src="img/logo.svg" class="header-logo" width="80px" />
+          <img src="/img/logo.svg" class="header-logo" width="80px" />
           <div class="header-content">
-            <h1>자유게시판</h1>
-            <p>자유롭게 소통하는 공간</p>
+            <h1>어울림</h1>
+            <p>우리들의 이야기를 담는 공간</p>
           </div>
         </div>
         <span></span>
@@ -46,7 +46,7 @@
         </div>
 
         <div class="comment-section">
-          <div class="comment-header">💬 댓글</div>
+          <div class="comment-header"></div>
 
           <div class="comment-write">
             <textarea
@@ -60,6 +60,6 @@
         </div>
       </div>
     </div>
-    <script src="js/post.js"></script>
+    <script src="/js/post.js"></script>
   </body>
 </html>
